<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"          android:title="@string/menu_home"          android:icon="@android:drawable/ic_menu_compass" />
        <item android:id="@+id/nav_invoices"      android:title="@string/menu_invoices"      android:icon="@android:drawable/ic_menu_agenda" />
        <item android:id="@+id/nav_payments"      android:title="@string/menu_payments"      android:icon="@android:drawable/ic_menu_save" />
        <item android:id="@+id/nav_receipts"     android:title="@string/menu_receipts"     android:icon="@android:drawable/ic_menu_agenda" />
        <item android:id="@+id/nav_clients"       android:title="@string/menu_clients"       android:icon="@android:drawable/ic_menu_myplaces" />
        <item android:id="@+id/nav_reports"       android:title="@string/menu_reports"       android:icon="@android:drawable/ic_menu_sort_by_size" />
        <item android:id="@+id/nav_chat"          android:title="@string/menu_chat"          android:icon="@android:drawable/ic_menu_send" />
        <item android:id="@+id/nav_notifications" android:title="@string/menu_notifications" android:icon="@android:drawable/ic_menu_info_details" />
    </group>
    <group android:id="@+id/nav_secondary">
        <item android:id="@+id/nav_settings" android:title="@string/menu_settings" android:icon="@android:drawable/ic_menu_preferences" />
        <item android:id="@+id/nav_support"  android:title="@string/menu_support"  android:icon="@android:drawable/ic_menu_help" />
        <item android:id="@+id/nav_logout"   android:title="@string/menu_logout"   android:icon="@android:drawable/ic_lock_power_off" />
    </group>
</menu>
